fix reponsive on small scrrens for direccion, filosofia, politica y recursos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -643,7 +643,7 @@ h6 {
 
 /*ESTILOS pagina NOSOTROS*/
 .historia-container{
-  margin-top: 20vh;
+  margin-top: 10vh;
 }
 
 .balsa-img {
@@ -739,6 +739,34 @@ h6 {
   border-radius: 15px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width:1024px){
+  .direccion-container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .direccion-container img {
+    margin-bottom: 10px;
+}
+
+@media (max-width:576px){
+  .filosofia-container{
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+  .info-nosotros-container{
+    flex-direction: column;
+    width: 90%;
+    justify-content: center;
+  }
+  .politica-container {
+    margin-top: 90px;
+  }
+}
+
 
 .socios {
   padding: 20px;
@@ -927,4 +955,5 @@ h6 {
 .formulario-container img {
   width: 603px;
   height: 573px;
+}
 }
